
* Customization
    - Added "transparent_color" setting in JSON config file.
      This setting is meant to be used by none-Windows platform
      where transparent background color is not supported,
      and user may customize a substitute color.

* Core
    - Added initial cross platform support (by Bernat).
    - Rewritten & improved code structure to support cross platform.

* Misc
    - Updated contributors.md with new contributor (Bernat).
    - Updated customization guide with new configurable setting.

TinyPedal 1.10.1 (2023-01-14)
-----------------------------
* Core
    - Fixed invalid deltabest & fuel data filename that contains special characters,
      which would cause saving & loading error.
    - Improved calculation for cruise, pedal, pressure, temperature, wheel widgets.

TinyPedal 1.10.0 (2022-12-09)
-----------------------------
* [New]Sectors Widget (created by Nibo)
    - Show accumulated target sector time, with two available options:
        * Show theoretical best sector time from best sectors of current session.
        * Show sector time from personal best laptime of current session.
    - Show accumulated current sector time.
    - Show sector/laptime gap comparing to sector time from personal best laptime of current session.
      Default is set to show for 5 seconds after done previous sector.
      Can be set to always show in config file.
    - Show theoretical best sector time of each sector on 3 separated sector bars.
    - Show sector time gap against session best sector time on sector bars.
    - Auto-freeze previous sector display for 5 seconds after done previous sector.
      Freeze duration can be customized in config file.
    - Auto save "best laptime", "best sector time","personal best sector time" of current session
      in config file when player returns to garage screen, and (re)load when player on track.
      Note: All the saved data is only valid for current session or car/track combo,